testsuite/tests/module/mod121.stderr

mod121.hs:5:5: error:
    Variable not in scope: m2 :: Int -> t0
    Perhaps you meant ‘m1’ (imported from Mod121_A)
